--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3.3'
 services:
+  db:
+    image: postgres:12.4
+    volumes:
+      - /var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  backend:
+    build: ../backend/foodgram/.
+    restart: always
+    depends_on:
+      - db
+    env_file:
+      - ./.env
 
   frontend:
     build:
