--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     server_tokens off;
     listen 80;
-    server_name localhost;
+    server_name 51.250.101.211;
 
     location /media/ {
         alias /media/;
